--- a/package.json
+++ b/package.json
@@ -61,7 +61,9 @@
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.5.0",
     "react-resizable-panels": "^2.1.3",
+    "react-slick": "^0.31.0",
     "recharts": "^2.12.7",
+    "slick-carousel": "^1.8.1",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "3.3.3",
